--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,7 @@ a:hover {
     color: darkblue;
 }
 
-#content form button {
+#content form button, .custombutton {
     margin: 20px 0;
     font-size: 40px;
     color: white;
@@ -131,12 +131,12 @@ a:hover {
     transition: background-color 100ms, transform 200ms;
 }
 
-#content button:hover {
+#content button:hover, .custombutton:hover {
     background-color: rgb(255, 72, 72);
     transform: scale(1.2);
 }
 
-#content button:active {
+#content button:active, .custombutton:active {
     background-color: rgb(123, 0, 0);
     transform: scale(0.7);
 }
@@ -504,10 +504,10 @@ a:hover {
 /* last min changes */
 
 body {
-    background-image: url("https://image.kkday.com/v2/image/get/s1.kkday.com/product_132968/20220906073211_AKBtu/jpg");
+    background-image: url("https://drive.google.com/uc?id=1YjyxQ7kwNorj05onLYp6-_YTsxuVEj00");
     background-size: cover;
     background-attachment: fixed;
-    backdrop-filter: blur(5px);
+    
 }
 
 #min-width-hack {
